Fix gap at bottom

--- a/css/style.scss
+++ b/css/style.scss
@@ -13,6 +13,7 @@ GENERAL
 =================*/
 
 html {
+  height: 100%;
   width: 100%;
   margin: 0;
 }
@@ -23,6 +24,8 @@ body {
   color: $primary-color;
   font-family: "Oleo Script", sans-serif;
   margin: 0;
+  min-height: 100%;
+  overflow:hidden;
   width: 100%;
 }
 ::selection {
@@ -260,14 +263,14 @@ footer > span, footer > form {
 .btc a {
     color:#fff;
     text-decoration:none;
-    vertical-align: -4px;
+    vertical-align: -5px;
 }
 
 .btc .address {
     cursor:auto;
     position:absolute;
     width:340px;
-    right:110%;
+    right:127%;
     margin-right:-170px;
     padding-bottom:7px;
     top:-30px;
@@ -289,7 +292,7 @@ footer > span, footer > form {
 
 .btc:hover .address,.btc .address:hover .address,.address:hover {
     opacity:1;
-    top:-30px;
+    top:-26px;
     pointer-events: auto;
 }
 
